# python_repo

./: README.md
automacoes_python/automacao_pdf/: README.md  pyproject.toml
automacoes_python/automacao_pdf/app/: projeto1.py
automacoes_python/organizacao_diretorios/: pyproject.toml
automacoes_python/organizacao_diretorios/app/: projeto2.py
