[tool.poetry]
name = "organizacao-diretorios"
version = "0.1.0"
description = "projeto que a de organização automatizada de arquivos em diretórios."
authors = ["Alice Lima"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
